# gpuVoxels

./: .cvsignore  .gitignore  .gitmodules  001.vxt  CMakeLists.txt  README.md  force.cpp  output.xml  rebuild.sh  rebulid-everything.sh
Experiments/: .gitignore  README.md
Experiments/Attachment/: Default.vxc
Experiments/DragonCurve/: README.md  alife.py  base.vxa  main.py
Experiments/Evolution/: README.md  base.vxa  fat_bone_muscles.py  main.py  muscle_fat.py  muscle_phase.py  phase.py
Experiments/Evolution/cppn/: networks.py  softbot.py
Experiments/Evolution/data/: base.vxa
Experiments/ForceField/: main.py  simple_attach_without_actuation.py
Experiments/NNPredict/: Puppy.py  README.md  biped.py  deepgreen.sh  exp_biped.sh  exp_v2.sh  main.py  rebuild.sh
Experiments/NNPredict/assets/: Biped.vxc  Puppy.vxc  robot.data
Experiments/NNPredict/bestfit/: robot_00027.vxd
Experiments/NNPredict/exp_biped_1000x1000/: base.vxa  (+1 more)
Experiments/bigGuys/: main.py
Experiments/demo/: main.py
Experiments/forTueMeeting/: main.py
Experiments/framework/: .gitignore  README.md  rebuild.sh  run.py
Experiments/xenobot/: .gitignore
VoxCAD/: CMakeLists.txt  Default.vxc.bak  README.md  VoxCAD.pro  VoxCad.qrc
VoxCAD/src/QTUtils/: QOpenGL.cpp  QOpenGL.h
VoxCAD/src/VX1/: GL_Utils.cpp  VXS_SimGLView.cpp  VXS_SimGLView.h  VX_Object.cpp  VX_Object.h  VX_Sim.cpp  VX_Sim.h
VoxCAD/src/VX2/: CMakeLists.txt
VoxCAD/src/main/: Dlg_Physics.cpp  Dlg_Physics.h  Dlg_VideoCapture.cpp  QVX_Interface.cpp  QVX_Interfaces.h  VoxCad.cpp  VoxCad.h  VoxCad.ui  main.cpp  vPhysics.ui
Voxelyze3/: CMakeLists.txt  README.md
Voxelyze3/data/: 000.vxd  0001.vxa  0002.vxd  0004.vxa  0005.vxa
Voxelyze3/src/: Voxelyze3.cu  vx_run.cpp
data/: 0001.vxd  0002.vxd  0006-run.vxd  base.vxa  gen01-0001.vxd
data/Attachment/: main.py  rebuild.sh
data/ForceField/: debug.txt  main.py
data/History/: 000.history
data/Puppy/: Puppy.py  Puppy.sh  base.vxa
data/attachment/: Voxelyze3  base.vxa  example.vxd  gen01-00.vxd  generator.py  generator_random_largest_component.py  output.xml  rebuild.sh  test_label.py
data/bak/: 0000.vxd  0006-still.vxd  003.vxd
data/batch/: simple_generator.py
data/bigGuys/: Voxelyze3  base.vxa  copyExecutables.sh  example.vxd  example.vxd.bak  gen01-00.vxd  main.py  output.xml  simple_generator.py  submit.sh  vx3_node_worker
data/bumpyfloor/: Default.vxc  base.vxa  bumpyfloor.py  gen01.vxd  output.xml  rebuild_only_voxelyze3.sh
data/fitnessfunction/: base.vxa  biped.py  exp_biped.sh
data/forVoxCAD/: 2blocks.vxa
data/math_expression/: base.vxa  field.vxd  rebuild.sh
data/mixmat/: base.vxa  gen01-00.vxd  output.xml
data/wall/: gen01.vxd  generator.py  output.xml  running-robot.py
doc/: File_Formats.md  VXA_File_Format.md
doc/diary/: Sida_Liu.md
doc/misc/: TypicalUseCase.drawio
docs/: README.md  get-started.rst  index.rst  vxa-vxd.rst  welcome.rst
docs/source/: contents.rst  index.rst
experiments/: README.md
misc/: TypicalUseCase.drawio
snap/: snapcraft.yaml
(+283 files in other folders)
